@@ -1,3 +1,8 @@
+2005-12-31  Benjamin Berg  <benjamin@sipsolutions.net>
+
+	* engines/clearlooks/src/clearlooks_style.c: (draw_box_gap),
+	(draw_box): Fix some possible NULL dereferenciations.
+
 2005-12-30  Richard Stellingwerff  <remenic@gmail.com>
 
 	* engines/clearlooks/src/clearlooks_style.c: (draw_shadow):
